--- a/single-page.html
+++ b/single-page.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="play-vid">
                 <video controls autoplay>
-                    <source src="img/vid.mp4" type="video/mp4"> 
+                    <source src="video/video1.mp4" type="video/mp4"> 
                 </video>
                 <h3>DHIRAJHUB-How Developers Work</h3>
                 <div class="play-info">
@@ -58,7 +58,7 @@
             </div>
             <div class="right-sidebar">
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 1.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 8.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 2.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 3.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 4.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 5.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 6.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 7.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 8.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="side-list">
-                    <a href="switch.html" class="small-size"><img src="img/thumbhnail 1.png" class="thumbnail" alt=""></a>
+                    <a href="switch.html" class="small-size"><img src="images/logo.jpeg" class="thumbnail" alt=""></a>
                     <div class="video-info">
                         <a href="switch.html">DHIRAJHUB</a>
                         <p>dhirajhub</p>
