--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
          </div>
          <!---->
          <div class="video_items">
-         <a href="/videoweb.html/video2.html">
+         <a href="/videoweb.html/videoxxx.html">
             <img src="images/video_images/2.jpg" alt="">
           </a>
           <div class="details flex">
@@ -275,7 +275,7 @@
             <div class="heading">
               <p>How to make Hotel Booking Website With HTML CSS ......</p>
               <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
-              <span>56.7M .1 Week ago</span>
+              <span>99M 1 Week ago</span>
             </div>
           </div>
         </div>
