--- a/videoweb.html/videoxxx.html
+++ b/videoweb.html/videoxxx.html
@@ -5,7 +5,6 @@
 </head>
 <body>
 
-<iframe width="1920" height="1080" src="https://www.freepornvideo.sex/embed/7751" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PvobVIixKHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
