--- a/videoweb.html/video2.html
+++ b/videoweb.html/video2.html
@@ -381,9 +381,9 @@
 
               <span>69M Subscribers</span>
 
-              <h5>Responsive Youtube Clone in HTML CSS and Javascript | Dark/LIght Mode | DHIRAJHUB </h5>
+              <h5>mia-khalifa-1000-midnights-bbc-compilation | DHIRAJHUB </h5>
 
-              <h5>In this video tutorial, I have show how to create a responsive youtube clone using Htlm and css only</h5>
+              
 
               <span>Show More</span>
 
