--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -792,8 +792,13 @@
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
+          <div class="more">
+            <a href="/">
+          <button class="btn-more">MORE...</button>
+            </a>
+          </div>
         </div>
-      </div>
+        </div>
     </section>
 
   </main>
