--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
             </a>
 
             <div class="nav_dropdown">
-              <a href="#" class="nav_link">
+              <div class="nav_link">
                 <i class="fa-solid fa-layer-group nav_icon"></i>
 
                 <span class="nav_name">Categories</span>
                 <i class="fa-solid fa-chevron-down nav_icon"></i>
-
-              </a>
+              </div>
+              
               <div class="nav_dropdown-collaps">
                 <ul class="nav_dropdown-content" id="myUL">
                   <li> <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a></li>
